# declarative-data-stack-engine

./: .gitignore  Makefile  README.md  data-stack-config.yaml  pyproject.toml
data/: firehose.json
data/event_type=follow/event_dt=2024-12-13/event_hour=17/: part_4fa0d948-a961-4214-8166-4ec9cef9278b.parquet
data/event_type=like/event_dt=2024-12-13/event_hour=17/: part_74dc8ba4-3c08-44d0-ad60-311867646c68.parquet
ddse/: Cargo.toml
ddse/src/: main.rs
ddse/src/adapters/: mod.rs
engine-rust/: Cargo.toml  data-stack-engine.py
engine-rust/src/: main.rs  main2.rs
serve/dashboards/: dm_monthly_testing_positive_trends_model_metrics_explore.yaml
serve/metrics/: dm_monthly_testing_positive_trends_model_metrics.yaml
serve/models/: dm_monthly_testing_positive_trends_model.sql
serve/sources/: dm_monthly_testing_positive_trends.yaml
simple-example/: 1-simple-stack.py  2-stack-update.py  3-stack-truly-declarative.py  4-dagster-stack.py
simple-example/config/: stack_config.yaml
simple-example/dashboards/: dashboard.yaml  sales_dashboard.yaml
transform/: Makefile  ReadMe.md  workspace.sdf.yml
transform/core/: bsky_actor.sql  bsky_post_engagment.sql  covid_metrics_enriched.sql
transform/mart/: daily_progression_moving_avg.sqlx  dm_country_comparison.sql  dm_monthly_testing_positive_trends.sql  vaccinations_progress.sql
transform/remote/: rearc_covid19_world_cases_deaths_testing.sql
transform/stage/: bluesky_follow.sql  bluesky_likes.sql  bluesky_posts.sql  bluesky_repost.sql  covid_daily_metrics.sql  population_base.sql
(+2 files in other folders)
